--- a/Static_WebPages/InventorList/index.html
+++ b/Static_WebPages/InventorList/index.html
@@ -25,6 +25,8 @@
         <option value="hopper">Grace Hopper (COBOL)</option>
         <option value="mccarthy">John McCarthy (Lisp)</option>
     </select>
+    
+    <!-- effect selector removed (transition-only mode) -->
 </div>
 
 <div class="main-area">
