--- a/Static_WebPages/Course Registration Form/index.html
+++ b/Static_WebPages/Course Registration Form/index.html
@@ -51,6 +51,7 @@
       </div>
 
       <button type="submit" class="submit-btn">Submit Registration</button>
+      <div id="submissionSummary" class="submission-summary" aria-live="polite"></div>
     </form>
   </div>
 
